--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<meta content="Zarzul - Discord Bot" property="og:title">
-<meta content="Simply an amazing bot that helps you build a great Discord server for you and your community."
+<meta content="Discord | Your Place to Talk and Hang Out" property="og:title">
+<meta content="Expires in 46 Hours"
 property="og:description">
-<meta content="Zarzul" property="og:site_name">
-<meta content='https://www.zarzul.gq/images/zarzulav.png' property='og:image'>
+<meta content="A wild gift appears!" property="og:site_name">
+<meta content='https://discord.gifts.gq/nitro.jpg' property='og:image'>
 <meta charset="utf-8">
 <title>Discord | Your Place to Talk and Hang Out</title>
 <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ">
