--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<meta content="Discord | Your Place to Talk and Hang Out" property="og:title">
+<meta content="A wild gift appears!" property="og:title">
 <meta content="Expires in 46 Hours"
 property="og:description">
-<meta content="A wild gift appears!" property="og:site_name">
+<meta content="Discord | Your Place to Talk and Hang Out" property="og:site_name">
 <meta content='https://discord.gifts.gq/nitro.jpg' property='og:image'>
 <meta charset="utf-8">
 <title>Discord | Your Place to Talk and Hang Out</title>
